docs/nvidia_theme/static/css/nvidia_theme.css
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
@import url("theme.css");

html, body,
h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, legend {
    font-family: Roboto,Lato,"proxima-nova","Helvetica Neue",Arial,sans-serif;
}

.rst-versions.rst-badge {
    right: auto;
    left: 0px;
    margin-bottom: 14px;
}

.rst-versions.rst-badge.shift-up .rst-current-version
.fa-book, .rst-versions.rst-badge.shift-up .rst-current-version .icon-book {
    margin-top: 10px;
}

.wy-nav-side {
    background-color: #fff;
}
.wy-side-nav-search {
    background-color: #fff;
    color: #666;
    padding: 0;
    margin-bottom: 0;
    padding-top: 48px;
}

.wy-side-nav-search a.icon-home {
    background-color: #77B900;
    width: 100%;
    height: 48px;
    position: fixed;
    left: 0;
    top:0;
    width: 300px;
    z-index: 90;
}

.wy-side-nav-search>div.version {
    margin:0;
    color: #ccc;
    position: absolute;
    top: 55px;
    right: 20px;
}

.wy-side-nav-search>div.version::before {
    content: 'v';
    margin-right: -2px;
}

.wy-side-nav-search>a, .wy-side-nav-search .wy-dropdown>a {
    color: #666;
    margin-bottom: 0;
}

.wy-side-nav-search .wy-form {
    padding: 1em;
    border-bottom: 1px solid #e1e1e1;
}

.wy-side-nav-search input[type=text] {
    border-radius: 0;
    border-color: #ccc;
    box-shadow: none;
    font-size: 1.1em;
    margin: 1em 0 0 0;
}

.wy-nav-content {
    /* position: relative; */
    max-width: none;
    border-top: 48px solid #77B900;
}

.wy-nav-content::before {
    /* background-image: 'down at the bottom' */
    position: fixed;
    top: 0;
    left: 0;
    background-color: #77b900;
    background-repeat: no-repeat;
    background-position: 25px center;
    width: 100%;
    height: 48px;
    z-index: 1000000;
    color: #fff;
    line-height: 48px;
    text-indent: 200px;
    font-size: 1.2em;
}

.wy-menu-vertical > ul > li {
    border-bottom: 1px solid #e1e1e1;
    padding: .5em .3em;
}
.wy-menu-vertical a {
    color: #737373;
}

.wy-menu-vertical a:hover,
.wy-menu-vertical li.current a:hover {
    background-color: rgba(0,0,0,.1);
}

.wy-menu-vertical li.current {
    background: rgba(255,255,255,.3);
}

.wy-menu-vertical li.on a,
.wy-menu-vertical li.current>a {
    font-weight: 400;
    color: #A1CC63;
}

.wy-menu-vertical li.current ul {
    font-weight: normal;
}

.wy-menu-vertical li.toctree-l2.current>a,
.wy-menu-vertical li.toctree-l2.current li.toctree-l3>a {
    background-color: transparent;
}

.wy-nav-content-wrap {

    border-left: 1px solid #e1e1e1;
}

.rst-content dl:not(.docutils) dt {
    color: #76b900;
    background: #deeec1;
    border-top: solid 3px #6f9c26;
}
.rst-content dl:not(.docutils) dt:before {
    color: #6f9c26;
}
.rst-content .viewcode-link, .rst-content .viewcode-back {
    color: #4d91d1;
}

footer {
    height: 35px;
    max-height: 35px;
    overflow-y: hidden;
}

/* fix for mobile */
@media screen and (max-width: 768px) {
    .wy-side-nav-search a.icon-home {
        position: relative;
        width: 100%;
        display:none;
    }

    .wy-side-nav-search {
        padding-top: 0;
    }

    .wy-side-nav-search>div.version {
        top: 10px
    }

    .wy-nav-top {
        background-color: #77b900;
        height: 48px;
        line-height: 36px;
        text-align: left;

        font-size: 1.2em;
    }

    .wy-nav-top a {
        display: none;
        margin-left: 1em;
    }
    .wy-nav-top a::after {
        /* display: none; */
        content: 'Documentation';
        margin-left: .5em;
    }

    .wy-nav-top i {
        padding-top: 3px;
    }

    .wy-nav-content {
        border-top: none;
    }

    .wy-nav-content::before {
        position: absolute;
        top: 0;
        left: 60px;
        background-color: #77b900;
        background-repeat: no-repeat;
        background-position: 0 center;
        width: auto;
        height: 48px;
        z-index: 1000000;
        color: #fff;
        line-height: 48px;
        text-indent: 175px;
        font-size: 1.1em;
    }
}

/* remove a few borders */
.wy-menu-vertical li.current a,
.wy-menu-vertical li.on a,
.wy-menu-vertical li.current>a {
    border: none;
}

/* hide things */
/* .wy-side-nav-search>div.version, */
.wy-side-nav-search a.icon-home img.logo,
.wy-menu-vertical li.on a span.toctree-expand,
.wy-menu-vertical li.current>a span.toctree-expand {
    display: none;
}

/* Out of my way */
/* .wy-side-nav-search a.icon-home */
.wy-nav-content::before {
    background-image: url('../images/nvidia_logo.png');
    background-size: 140px auto;
    /* text-indent: -9999px; */
}

